assets/css/styles.css
/* ... */
.server {width: 85%; background-color: #98baf2; margin-bottom: 20px; right: -14px; position: relative;}
.scripting {width: 85%; background-color: #a9afba; margin-bottom: 20px;} 
.linux {width: 80%; background-color: #1e417a; margin-bottom: 20px;} 
.webdev {width: 70%; background-color: #82adf2; margin-bottom: 20px;} 
.programming {width: 60%; background-color: #2e3644; margin-bottom: 20px;}
.python {width: 50%; background-color: #347cf9;}

.about-container {background-color: #f5f5f5;}

.profilepic { 
 vertical-align: middle;
 border-radius: 50%; 
}

/* CSS for mobile devices */

@media only screen and (max-width: 600px)  {
 
 html {
 overflow-x: hidden;
 }

 .server {
 width: 76%;
 }
 
 .title-highlight {
 display: block;
 color: #f46fa3;
 }

 .github-content {
 padding-left: 0px;
 }
}

@media only screen (min width: 600px) and (max width: 800px) {

 .server {
 width: 79%;
 }

}

